--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2566,11 +2566,13 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		
 	}
 
 		.image img {
 			border-radius: 0.25em;
 			display: block;
+			
 		}
 
 		.image.left, .image.right {
@@ -2597,6 +2599,7 @@ input, select, textarea {
 			display: block;
 			margin: 0 0 2em 0;
 			width: 100%;
+			
 		}
 
 			.image.fit img {
@@ -3031,6 +3034,7 @@ input, select, textarea {
 				position: absolute;
 				top: 0;
 				width: 100%;
+				object-fit: cover;
 			}
 
 		.spotlights > section > .content {
