added video project

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,8 @@ input, select, textarea {
 	}
 
 	body {
-		-ms-overflow-style: scrollbar;
+		-ms-overflow-style: none;
+		
 	}
 
 	@media screen and (max-width: 480px) {
@@ -3909,5 +3910,8 @@ input, select, textarea {
 			#intro {
 				background-attachment: scroll;
 			}
+			
 
+
+			
 		}
