added a new video and updated content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3494,6 +3494,44 @@ input, select, textarea {
 		margin: 0 auto;
 	}
 
+	/* VIDEO SECTION */
+	.gallery-container {
+		position: relative;
+		width: 100%;
+		max-width: 100%;
+		overflow: hidden;
+	}
+	
+	.gallery {
+		display: flex;
+		transition: transform 0.5s ease-in-out;
+	}
+	
+	.gallery video {
+		min-width: 100%;
+		max-width: 100%;
+		height: auto;
+	}
+	
+	button {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		background-color: rgba(0, 0, 0, 0.5);
+		color: white;
+		border: none;
+		padding: 10px;
+		cursor: pointer;
+	}
+	
+	button.prev {
+		left: 10px;
+	}
+	
+	button.next {
+		right: 10px;
+	}
+
 /* Footer */
 
 	#sidebar + #wrapper + #footer {
